--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "gulp-imagemin": "~6.2",
     "gulp-postcss": "~8.0",
     "gulp-stylelint": "~11.0",
-    "gulp-uglify": "~3.0",
+    "gulp-terser": "^2.0.0",
     "gulp-vinyl-zip": "~2.2",
     "handlebars": "~4.7",
-    "highlight.js": "9.18.3",
+    "highlight.js": "10.5.0",
     "js-yaml": "~3.13",
     "merge-stream": "~2.0",
     "postcss-calc": "~7.0",
